--- a/UGuesser/style.css
+++ b/UGuesser/style.css
@@ -15,9 +15,9 @@ body {
 
 #map {
   position: fixed;
-  top: 80%;
+  top: 50%;
   left: 80%;
-  
+  overflow: hidden;
   height: 20%;
   width: 20%;
   z-index: 10;
