--- a/UGuesser/style.css
+++ b/UGuesser/style.css
@@ -23,6 +23,13 @@ body {
   z-index: 10;
 }
 
+#map:hover {
+  height: 30%;
+  width: 30%;
+  top: 40%;
+  left: 70%;
+  transition: 0.7s;
+}
 
 #guessbtn {
   position: fixed;
@@ -78,4 +85,29 @@ body {
   z-index: 25;
   top: 95%;
   left: 10%;
+}
+
+#nextbtn {
+  position: fixed;
+  top: 90%;
+  left: 30%;
+  height: 5%;
+  width: 20%;
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 4px;
+
+ 
+  z-index: 10;
+}
+
+#nextbtn:hover {
+  background-color:#005229;
+  transition: 0.7s;
 }
