--- a/UGuesser/style.css
+++ b/UGuesser/style.css
@@ -111,3 +111,10 @@ body {
   background-color:#005229;
   transition: 0.7s;
 }
+
+#round {
+  position: fixed;
+  z-index: 25;
+  top: 85%;
+  left: 10%;
+}
