--- a/UGuesser/game/style.css
+++ b/UGuesser/game/style.css
@@ -9,26 +9,26 @@ body {
 #pano {
   z-index: 0;
   position: fixed;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vh;
 
 }
 
 #map {
   position: fixed;
-  top: 50%;
-  left: 80%;
+  top: 50vh;
+  left: 80vh;
   overflow: hidden;
-  height: 20%;
-  width: 20%;
+  height: 20vh;
+  width: 20vh;
   z-index: 10;
 }
 
 #map:hover {
-  height: 50%;
-  width: 50%;
-  top: 40%;
-  left: 50%;
+  height: 50vh;
+  width: 50vh;
+  top: 40vh;
+  left: 50vh;
   transition: 0.7s;
 }
 
