--- a/UGuesser/game/style.css
+++ b/UGuesser/game/style.css
@@ -9,26 +9,26 @@ body {
 #pano {
   z-index: 0;
   position: fixed;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 
 }
 
 #map {
   position: fixed;
-  top: 50vh;
-  left: 80vw;
+  top: 50%;
+  left: 80%;
   overflow: hidden;
-  height: 20vh;
-  width: 20vw;
+  height: 20%;
+  width: 20%;
   z-index: 10;
 }
 
 #map:hover {
-  height: 50vh;
-  width: 50vw;
-  top: 40vh;
-  left: 50vh;
+  height: 50%;
+  width: 50%;
+  top: 40%;
+  left: 50%;
   transition: 0.7s;
 }
 
