--- a/UGuesser/game/style.css
+++ b/UGuesser/game/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 
-#pano {
+#outperPano {
   z-index: 0;
   position: fixed;
   height: 100%;
@@ -14,7 +14,7 @@ body {
 
 }
 
-#map {
+#outerMap {
   position: fixed;
   top: 50%;
   left: 80%;
@@ -24,7 +24,7 @@ body {
   z-index: 10;
 }
 
-#map:hover {
+#outerMap:hover {
   height: 50%;
   width: 50%;
   top: 40%;
