--- a/UGuesser/game/style.css
+++ b/UGuesser/game/style.css
@@ -14,8 +14,26 @@ body {
 
 }
 
+#pano {
+  z-index: 0;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+
+}
+
 #outerMap {
   position: fixed;
+  top: 50%;
+  left: 80%;
+  overflow: hidden;
+  height: 20%;
+  width: 20%;
+  z-index: 10;
+}
+
+#map {
+  position: absolute;
   top: 50%;
   left: 80%;
   overflow: hidden;
@@ -31,6 +49,14 @@ body {
   left: 50%;
   transition: 0.7s;
 }
+#map:hover {
+  height: 50%;
+  width: 50%;
+  top: 40%;
+  left: 50%;
+  transition: 0.7s;
+}
+
 
 #guessbtn {
   position: fixed;
