--- a/UGuesser/game/style.css
+++ b/UGuesser/game/style.css
@@ -16,7 +16,7 @@ body {
 
 #pano {
   z-index: 0;
-  position: fixed;
+  position: fixed !important;
   height: 100%;
   width: 100%;
 
@@ -33,7 +33,7 @@ body {
 }
 
 #map {
-  position: absolute;
+  position: fixed !important;
   top: 50%;
   left: 80%;
   overflow: hidden;
